# ens-fast

./: .env.sample  .gitattributes  .gitignore  Cargo.toml  Dockerfile  Procfile  README.md  captain-definition  package.json  pnpm-lock.yaml  tsconfig.cjs.json  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cache-full.yml  cache.yml  nodetest.yml  rusttest.yml
cron/: ensToAdd.json  full.js  index.js  package.json  pnpm-lock.yaml
data/: ensToAdd.json  ensToAddMock.json  snapshots-full.json  snapshots.json  stats.txt
docker/: Dockerfile
nodeserver/: .eslintrc.js  captain-definition  tsconfig.esm.json
nodeserver/src/: index.ts  types.ts
rustserver/: .gitignore  Cargo.toml
rustserver/src/: main.rs
src/: ens.rs  index.ts  main.rs  types.ts
